--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Exploring Abhiyan's World: A Collection of Passion Projects</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -33,9 +33,9 @@
             <li>
                 <a href="#education">Education</a>
             </li>
-            <li>
+            <!-- <li>
                 <a href="#projects">Projects</a>
-            </li>
+            </li> -->
             <li>
                 <a href="#skills">Skills</a>
             </li>
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
+            <h1>Abhiyan Timilsina</h1>
+            <h2>Senior Software Engineer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,10 +73,26 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Hello and welcome to my portfolio!
+                    </p> 
+                    <br>                    
+                    <p>
+                        My name is Abhiyan Timilsina and I am a Senior Software Developer with over 4 years of experience. From my early days of building my first web application in 2008, I have had a passion for software development and a love for learning new technologies.
                     </p>
+                    <br>
+                    <p>
+                        As a developer, I am constantly looking for ways to expand my knowledge and skills. I am always seeking out new challenges and opportunities to grow, and I am excited about the ever-evolving landscape of technology.
+                    </p>
+                    <br>
+                    <p>
+                        Throughout my career, I have had the opportunity to work with a variety of technologies, which has given me a broad range of experience and expertise. I take pride in my ability to think critically, problem-solve, and deliver high-quality work.
+                    </p>
+                    <br>
+                    <p>
+                        Thank you for taking the time to visit my portfolio. Please feel free to explore my projects and get in touch if you would like to learn more about my experience and skills.
+                    </p>
+                    <br>
+                </p>
                 </div>
             </div>
         </div>
@@ -86,28 +102,50 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="April 2020 – Present">
+                <h3>i3systems.ai</h3>
+                <h4>Senior Software Developer</h4>
+                <ul>
+                    <li>Expertly utilized Python for creating backend using frameworks like Django and Flask</li>
+                    <li>Mentoring and helping junior team members via reviews, troubleshooting, task assignment etc</li>
+                    <li>Utilized cloud services like Azure and AWS for deploying applications, monitoring and service integration</li>
+                    <li>Worked on creating processing workflows using Celery and Redis</li>
+                    <li>Implemented methods to scale RDBMS database using indexing, table partitioning and sharding</li>
+                    <li>Worked on creating backend, parsers for Medical and Financial Underwriting Rule Engine</li>
+
+                </ul>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="December 2018 – April 2020">
+                <h3>Mountblue technologies</h3>
+                <h4>Software Engineering Trainee ( Ruby ROR + Python/Django) </h4>
+                <ul>
+                    <li>Bootcamp on Computer Science and programming with Python / Django</li>
+                    <li>Deployed to client location to work as a Full Stack Developer</li>
+                    <li>Utilized Ruby and Javascript to build reliable application</li>
+                    <li>Worked on building Application Tracking System from scratch</li>
+                    <li>Worked on video streamming service for LMS using Ruby</li>
+                    <li>Worked on third party services and payment integration</li>
+                </ul>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="September 2018 – December 2018">
+                <h3>Krrenova</h3>
+                <h4>MEAN stack Developer</h4>
+                <ul>
+                    <li>Implemented CRUD backend in MEAN stack for Advertisement Agenecy Company</li>
+                    <li>Designed and Developer SPA on Angular for a Sport Club</li>
+                    <li>Worked on building Ecommerce webite for a client with payment, review and reconnmendation service </li>
+                </ul>
+            </div>
+            <div data-date="January 2017 – March 2017">
+                <h3>Indium Foundation (Internship) </h3>
+                <h4>NodeJS developer</h4>
+                <ul>
+                    <li>Learn about Javascript and NodeJS</li>
+                    <li>Built a simple CRUD application in NodeJS using Express</li>
+                </ul>
+
             </div>
         </div>
     </div>
@@ -116,104 +154,41 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>BMS Institute of Technology and Management, VTU</h3>
+            <span class="education-date">Sept 2014 - Sept 2018</span>
+            <h4>Bachelor of Engineering in Computer Science</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+               
             </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
+            <h3>Trinity International College</h3>
+            <span class="education-date">Sept 2012 - Sept 2014</span>
+            <h4>High School</h4>
         </div>
         <!-- End .education-block -->
-    </div>
-    <!-- End #education -->
-
-    <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
-        <div class="container">
-            <div class="row">
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-            </div>
+        <div class="education-block">
+            <h3>Kamal Netra Chhunna Muna HSS</h3>
+            <span class="education-date">January 1999 - April 2012</span>
+            <h4>Primary and Secondary Schooling</h4>
         </div>
     </div>
-    <!-- End #projects -->
-
+    <!-- End #education -->
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
             <li>Python</li>
             <li>Ruby</li>
-            <li>Go</li>
             <li>Node.js</li>
             <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Django</li>
+            <li>Celery</li>
+            <li>CI/CD pipelines</li>
+            <li>Azure</li>
+            <li>AWS</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -221,9 +196,10 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
+            <form action="https://api.web3forms.com/submit" method="POST">
+                <input type="hidden" name="access_key" value="260e62c8-ae0f-47a8-9b9c-9e45d0ecbe8e">
+                <input type="hidden" name="name" value="Contact request from personal website" />
+                <input type="email" name="email" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
                 <button type="submit">Send</button>
             </form>
@@ -237,7 +213,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2023</span> ABHIYAN TIMILSINA
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -248,22 +224,13 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/abhiyan52" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                            <a href="https://stackoverflow.com/users/6711696/jinja2django" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/abhiyan-timilsina-6b679b142/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
